Fix testUpdateWhenDataNotContainsSameKeyWithGivenData and testAddDataWhenDataExistInDB in AccountRepositoryTest.java