@@ -10,7 +10,6 @@ import org.springframework.test.context.jdbc.Sql;
 
 import java.sql.Date;
 import java.util.Comparator;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -85,10 +84,10 @@ class AccountRepositoryTest {
         accountRepository.save(account);
         var actual = accountRepository.findAll();
         assertEquals(4, actual.size(), "データを与えた後のDBに保存されているデータ数を確認");
-        var maxIdValue = actual.stream().max(Comparator.comparing(Account::getId)).orElseGet(Assertions::fail);
+        var accountValueWithMaxId = actual.stream().max(Comparator.comparing(Account::getId)).orElseGet(Assertions::fail);
 
-        assertNotNull(maxIdValue, "追加されたデータが存在することの確認");
-        assertEquals(account, maxIdValue, "追加したデータがDBに登録されているかの確認");
+        assertNotNull(accountValueWithMaxId, "追加されたデータが存在することの確認");
+        assertEquals(account, accountValueWithMaxId, "追加したデータがDBに登録されているかの確認");
 
     }
 
@@ -114,24 +113,20 @@ class AccountRepositoryTest {
 
         assertEquals(4, actual.size(), "データを与えた後のDBに保存されているデータ数を確認");
 
-        var maxIdValue = actual.stream().max(Comparator.comparing(Account::getId)).orElseGet(Assertions::fail);
+        var accountValueWithMaxId = actual.stream().max(Comparator.comparing(Account::getId)).orElseGet(Assertions::fail);
 
-        assertNotNull(maxIdValue, "追加されたデータが存在することの確認");
-        assertEquals(4, maxIdValue.getId(), "追加したデータのキーがDBのID列を利用したIDに変更されている事を確認");
-        assertEquals(account.getItemDate(), maxIdValue.getItemDate(), "追加したデータの日付が登録されている事を確認");
-        assertEquals(account.getItem(), maxIdValue.getItem(), "追加したデータの内容が登録されている事を確認");
-        assertEquals(account.getExpense(), maxIdValue.getExpense(), "追加したデータの支出が登録されている事を確認");
-        assertEquals(account.getIncome(), maxIdValue.getIncome(), "追加したデータの収入が登録されている事を確認");
-        assertEquals(account.getNote(), maxIdValue.getNote(), "追加したデータの内容が登録されている事を確認");
+        assertNotNull(accountValueWithMaxId, "追加されたデータが存在することの確認");
+        assertEquals(4, accountValueWithMaxId.getId(), "追加したデータのキーがDBのID列を利用したIDに変更されている事を確認");
+        assertEquals(account.getItemDate(), accountValueWithMaxId.getItemDate(), "追加したデータの日付が登録されている事を確認");
+        assertEquals(account.getItem(), accountValueWithMaxId.getItem(), "追加したデータの内容が登録されている事を確認");
+        assertEquals(account.getExpense(), accountValueWithMaxId.getExpense(), "追加したデータの支出が登録されている事を確認");
+        assertEquals(account.getIncome(), accountValueWithMaxId.getIncome(), "追加したデータの収入が登録されている事を確認");
+        assertEquals(account.getNote(), accountValueWithMaxId.getNote(), "追加したデータの内容が登録されている事を確認");
 
-        var recordsWithoutAddedOne = actual.stream().limit(3L).toList();
-
-        assertEquals(original.stream().map(Account::getItemDate).toList(), recordsWithoutAddedOne.stream().map(Account::getItemDate).collect(Collectors.toList()), "既存データのitemDateの値が変更されていない事を確認");
-        assertEquals(original.stream().map(Account::getItem).collect(Collectors.toList()), recordsWithoutAddedOne.stream().map(Account::getItem).collect(Collectors.toList()), "既存データのitemの値が変更されていない事を確認");
-        assertEquals(original.stream().map(Account::getIncome).toList(), recordsWithoutAddedOne.stream().map(Account::getIncome).toList(), "既存データのincomeの値が変更されていない事を確認");
-        assertEquals(original.stream().map(Account::getExpense).toList(), recordsWithoutAddedOne.stream().map(Account::getExpense).toList(), "既存データのexpenseの値が変更されていない事を確認");
-        assertEquals(original.stream().map(Account::getNote).toList(), recordsWithoutAddedOne.stream().map(Account::getNote).toList(), "既存データのnoteの値が変更されていない事を確認");
+        assertEquals(3, actual.stream().filter(accountValue -> accountValue.getId() != 4).toList().size(), "追加したデータを除いたデータ数が３である事の確認");
+        assertTrue(original.contains(actual.get(0)), "ID値が1であるデータはデータ追加前にも存在していることの確認");
+        assertTrue(original.contains(actual.get(1)), "ID値が2であるデータはデータ追加前にも存在していることの確認");
+        assertTrue(original.contains(actual.get(2)), "ID値が3であるデータはデータ追加前にも存在していることの確認");
 
     }
-
 }
